# mcpepe-casino

./: newmapper.py  project_sitemap.txt
.claude/: settings.local.json
backend/: .gitignore  fund-vault.js  idl.json  package-lock.json  package.json  patriots-simulator.js  server.js  simulator.js  snowstorm-simulator.js  withdraw.js
frontend/: idl.json  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: WalletProvider.tsx
frontend/components/layout/: Header.tsx  (+2 more)
frontend/config/: pumpMultipliers.json
mcpepe_casino/: Anchor.toml  Cargo.toml
mcpepe_casino/programs/mcpepe_casino/: Cargo.toml
mcpepe_casino/programs/mcpepe_casino/src/: constants.rs  errors.rs  lib.rs
mcpepe_casino/programs/mcpepe_casino/src/blackjack/: mod.rs  play.rs  state.rs
mcpepe_casino/programs/mcpepe_casino/src/coinflip/: play.rs  state.rs
mcpepe_casino/programs/mcpepe_casino/src/instructions/: mod.rs
mcpepe_casino/programs/mcpepe_casino/src/patriots/: play.rs  state.rs
mcpepe_casino/programs/mcpepe_casino/src/pumpit/: mod.rs  play.rs  state.rs
mcpepe_casino/programs/mcpepe_casino/src/roulette/: mod.rs  play.rs  state.rs
mcpepe_casino/programs/mcpepe_casino/src/rps/: instruction.rs  mod.rs  state.rs
mcpepe_casino/programs/mcpepe_casino/src/snowstorm/: play.rs  state.rs
mcpepe_casino/programs/mcpepe_casino/src/vacation/: play.rs  state.rs
mcpepe_casino/programs/mcpepe_casino/src/whackd/: play.rs  state.rs
mcpepe_casino/tests/: mcpepe_casino.ts
mcpepe_coinflip/: Anchor.toml
mcpepe_coinflip/tests/: mcpepe_coinflip.ts
(+21 files in other folders)
